--- a/backend/package.json
+++ b/backend/package.json
@@ -1,53 +1,66 @@
 {
   "name": "backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "1.0.0",
   "private": true,
-  "license": "UNLICENSED",
+  "type": "module",
+  "license": "MIT",
   "scripts": {
-    "build": "nest build",
+    "dev": "nodemon --exec node --import ./swc.register.js ./src/main.ts",
+    "build": "swc src -d dist",
+    "start": "node dist/src/main.js",
+    "knex": "node --import ./ts-node.register.js ../node_modules/knex/bin/cli.js --knexfile=./knexfile.ts",
+    "migrate:dev": "yarn knex migrate:latest",
+    "migrate:dev:make": "yarn knex migrate:make -- -x ts",
+    "migrate:dev:down": "yarn knex migrate:down",
+    "migrate:dev:rollback": "yarn knex migrate:rollback --all",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "npx eslint \"{src,libs,test}/**/*.ts\"",
+    "lint:fix": "yarn lint --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "@nestjs/common": "10.4.18",
+    "@nestjs/config": "3.3.0",
+    "@nestjs/core": "10.4.18",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-express": "10.4.18",
+    "@types/knex": "0.16.1",
+    "@types/passport-jwt": "4.0.1",
+    "argon2": "0.41.1",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
+    "knex": "3.1.0",
+    "objection": "3.1.5",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
+    "pg": "8.13.1",
+    "quoridor-game-shared": "workspace:*",
+    "reflect-metadata": "0.2.2",
+    "rxjs": "7.8.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "@nestjs/cli": "10.4.9",
+    "@nestjs/schematics": "10.2.3",
+    "@nestjs/testing": "10.4.18",
+    "@swc-node/register": "1.10.9",
+    "@swc/cli": "0.6.0",
+    "@swc/core": "1.10.7",
+    "@types/express": "5.0.2",
+    "@types/jest": "29.5.14",
+    "@types/supertest": "6.0.3",
+    "eslint-plugin-simple-import-sort": "12.1.1",
+    "jest": "29.7.0",
+    "nodemon": "3.1.9",
+    "source-map-support": "0.5.21",
+    "supertest": "7.1.1",
+    "ts-jest": "29.3.4",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
