--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,26 +2,46 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:css": "npx stylelint \"**/*.scss\" --allow-empty-input",
+    "lint:js": "npx eslint src",
+    "lint": "yarn lint:css && yarn lint:js",
+    "lint:fix": "npx eslint src --fix"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@fortawesome/free-solid-svg-icons": "6.7.2",
+    "@fortawesome/react-fontawesome": "0.2.2",
+    "@hookform/resolvers": "3.10.0",
+    "@mui/material": "6.4.0",
+    "@reduxjs/toolkit": "2.5.1",
+    "clsx": "2.1.1",
+    "query-string": "9.1.1",
+    "quoridor-game-shared": "workspace:*",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "7.54.2",
+    "react-toastify": "11.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "@eslint/js": "9.25.0",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
+    "@vitejs/plugin-react": "4.4.1",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.3",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "0.4.19",
+    "globals": "16.0.0",
+    "sass": "1.83.1",
+    "stylelint": "16.12.0",
+    "stylelint-config-recommended-scss": "14.1.0",
+    "vite": "6.3.5"
   }
 }
