--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "sass": "1.83.1",
     "stylelint": "16.12.0",
     "stylelint-config-recommended-scss": "14.1.0",
+    "typescript-plugin-css-modules": "5.1.0",
     "vite": "6.3.5"
   }
 }
