--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.54.2",
-    "react-toastify": "11.0.2"
+    "react-redux": "9.2.0",
+    "react-toastify": "11.0.2",
+    "redux": "5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "9.25.0",
